src/features/roller/Keep.module.less
@import (reference) "../../common.less";

.layout {
  max-width: @screen-sm;
  margin: 0 auto;

  & > button {
    margin-bottom: 24px;
  }
}

.content {
  .torii-box();
  margin-bottom: 16px;
  padding-bottom: 8px;
}

.figures {
  margin-top: 24px;
}

.additional-actions {
  margin-top: 24px;

  .buttons {
    margin-bottom: 16px;
    display: flex;
    justify-content: space-between;
    button {
      margin-right: 16px;
    }
  }

  @media (min-width: @screen-md) {
    .buttons {
      float: left;
    }

    form {
      button {
        float: right;
      }
    }
  }
}

.text {
  text-align: center;
}

.addkept-die {
  background-color: @addkept-die-color;
}

